--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>App</title>
+    <title>beBetter</title>
   </head>
   <body>
     <noscript>
